# tMatch

./: .env.example  .gitignore  README.md  compose.yml  dockerfile  entrypoint.sh
.github/workflows/: tests.yml
src/: alembic.ini  app.py  config.py  config.toml  conftest.py  db.sql  main.py  pyproject.toml  seed.py  seed.sql
src/.streamlit/: secrets.toml.example
src/alembic/: env.py
src/alembic/versions/: 31bc8bdf4d6a_project_per_program.py  39566c1170e0_multiple_roles_in_same_program_allowed.py  6b1163aa5808_seeds.py  b6b57c77b776_initial_commit.py
src/components/: keywords.py  project.py
src/emails/: email.html
src/endpoints/: auth.py
src/models/: __init__.py  auth_token.py  keyword.py  program.py  program_membership.py  project.py  project_rating.py  projects_keyword.py  role.py  session.py  user.py
src/pages/: landing.py  login.py  manage_projects.py  manage_users.py  project.py
src/seed/: engine.py  keywords.py  programs.py  roles.py  seed.py
src/seeds/: engine.py  keywords.py  programs.py  roles.py
src/services/: auth.py  db.py  ldap.py  mail.py
src/tests/unit/: test_assignment.py  test_ldap.py  test_logger.py
src/utils/: assignment.py  logger.py  nav.py
src/views/: assigned_project.py  landing.py  login.py  manage_projects.py  manage_users.py  project_detail.py  projects.py
