[project]
name = "tmatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "jinja2>=3.1.6",
    "ldap3>=2.9.1",
    "pandas-stubs>=3.0.0.260204",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.48",
    "starlette[full]>=1.0.0",
    "streamlit>=1.55.0",
    "types-ldap3>=2.9.13.20260319",
    "uvicorn[standard]>=0.42.0",
]

[tool.pyright]
reportUnknownMemberType = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAny = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
